--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- bootswatch. Bootstrap CSS -->
+    <script type="text/javascript" src="bootstrap/bootstrap.js" charset="UTF-8"></script>
     <link type="text/css"  href="styles/bootstrap.css" rel="stylesheet">
     <!--
     <link type="text/css"  href="styles/bootstrap.min.css" rel="stylesheet">-->
