--- a/maxTemp.html
+++ b/maxTemp.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="comparison.html">Comparison</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="data">Data</a>
+                                <a class="nav-link" href="data.html">Data</a>
                             </li>
                         </ul>
                     </div>
