--- a/maxTemp.html
+++ b/maxTemp.html
@@ -63,8 +63,8 @@
                             <div class="card-header"><h4>Latitude vs Temperature</h4></div>
                             <div class="card-body">
                               
-                              <p class="card-text">The correlation between Temperature and Latitude is strong ike the force,
-                                  temperature is higher in cities close to the Ecuator where latitude is 0. <br /> For latitudes above the Ecuator as latitude increases the temperature decreases. <br />For the few cities below the Ecuator temperature decreases at a lower rate.</p>
+                              <p class="card-text">There is a strong correlation between Temperature and Latitude. <br />
+                                  Temperature is higher in cities close to the Ecuator where latitude is 0. <br /> For latitudes above the Ecuator as latitude increases the temperature decreases. <br />For the few cities below the Ecuator temperature decreases at a lower rate.</p>
                             </div>
                         </div>
                     </div>
